HighContrast: Fix sidebar borders

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2200,7 +2200,7 @@ GtkFileChooserDialog {
     @extend %selected_items;
   }
 
-  & > GtkScrolledWindow > .frame {
+  & > scrolledwindow > .frame {
     border-right: 1px solid $borders_color;
     &:dir(rtl) {
       border-right: none;
